# gambi

./: .env.example  .gitignore  CLAUDE.md  README.md  conftest.py  gambi.agents.example.json  pyproject.toml
.github/workflows/: ci.yml
docs/: gambi-roadmap.md  observabilidade.md  stackspot-agent-mode-setup.md  vscode-setup.md
docs/stackspot/: 01-autenticacao.md  02-agents-api.md  03-upload-files.md  04-knowledge-sources-api.md  05-remote-quick-commands.md  06-modelos-llm.md  07-mapeamento-openai-stackspot.md  08-gaps-pesquisa.md  README.md
gambi/: __init__.py  config.py  logging_config.py  main.py
gambi/adapters/: __init__.py
gambi/adapters/catalog/: config_catalog.py
gambi/adapters/http/: app.py  errors.py  middleware.py  routes_chat.py  routes_models.py  schemas_openai.py  sse.py
gambi/adapters/stackspot/: auth.py  buffered.py  client.py  request_payload.py  (+4 more)
gambi/application/: __init__.py  ports.py  use_cases.py
gambi/domain/: __init__.py  citations.py  flattener.py  mapping.py  models.py  structured.py
gambi/observability/: __init__.py  config.py  emit.py  redaction.py  wide_event.py
scripts/: spike-quick-commands.sh  validar-agent-mode.sh
tests/e2e/: test_app.py  test_wide_event_e2e.py
tests/integration/: test_auth.py  test_buffered_invoker.py  test_invoker.py  test_log_file_sink.py  test_streamer.py  test_wide_event_middleware.py
tests/unit/: test_citations.py  test_config.py  test_emit.py  test_flattener.py  test_mapping.py  test_observability_config.py  test_redaction.py  test_stream_parser.py  test_structured.py  test_wide_event.py
